feat: Quiz Create Quiz & Quiz studio

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 @import "primeicons/primeicons.css";
 
 body {
-  background-color: white;
+  background-color: rgb(241, 244, 251);
   color: black;
 }
 
