shorts, colabs & quiz fix

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 @import "primeicons/primeicons.css";
 
 body {
-  background-color: rgb(241, 244, 251);
+  background-color: #F1F4FB;
   color: black;
 }
 
